tests/T5.pan
assert : { b:bool | b = true } -> unit

f : string -> unit
= assert false
